# mock_serial_interface

./: .gitignore  CMakeLists.txt  README.md  mock_serial_interface.xml  package.xml
config/: controllers.yaml
description/: robot.urdf.xacro  ros2_control.xacro
include/mock_serial_interface/: mock_driver.hpp  mock_hardware_interface.hpp
launch/: test_mock_hardware.launch.py
rviz/: mock_serial.rviz
src/: mock_driver.cpp  mock_hardware_interface.cpp
